Contact Form Button Style Changed

--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -131,6 +131,11 @@
           {{ 'templates.contact.form.send' | t }}
         </button>
       </div>
+      <div class="contact__button_1">
+        <button type="submit" class="button">
+          {{ 'templates.contact.form.send' | t }}
+        </button>
+      </div>
     {%- endform -%}
   </div>
 </div>
