--- a/assets/section-contact-form.css
+++ b/assets/section-contact-form.css
@@ -23,6 +23,13 @@
 .contact__button {
   margin-top: 3rem;
 }
+.contact__button_1 {
+  margin-top: 2rem;
+}
+.contact__button_1 button {
+  background: none;
+  color: #000;
+}
 
 @media screen and (min-width: 750px) {
   .contact__button {
